# Market-Research

./: .env  .gitignore  Market_Research_Report.txt  README.md  main.py  pyproject.toml
src/marketing/: crew.py
src/marketing/config/: agents.yaml  tasks.yaml
src/markting/: crew.py
src/markting/config/: agents.yaml  tasks.yaml
