[project]
name = "marketanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.201.1",
    "ipykernel>=6.30.1",
    "jedi>=0.19.2",
    "mypy>=1.18.2",
    "notebook>=7.4.7",
    "pylint>=3.3.8",
    "types-requests>=2.32.4.20250913",
]
